# mdict-mquery

./: .gitignore  README.md  pyproject.toml
mdict_mquery/: __init__.py  readmdict.py
